--- a/index.html
+++ b/index.html
@@ -1,13 +1,39 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="hu">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Weblap</title>
+    <link rel="stylesheet" type="text/css" href="./style/style.css">
 </head>
 <body>
-    <h1>Weblap</h1>
+    <div id="container">
+        <div id="header">
+            <h1>Lorem, ipsum dolor.</h1>
+        </div>
+        <div id="nav">
+            <ul>
+                <li><a href="#">Menüpont 1</a></li>
+                <li><a href="#">Menüpont 2</a></li>
+                <li><a href="#">Menüpont 3</a></li>
+                <li><a href="#">Menüpont 4</a></li>
+                <li><a href="#">Menüpont 5</a></li>
+            </ul>
+        </div>
+        <div id="content">
+
+            <div class="news">Lorem ipsum dolor sit amet consectetur adipisicing elit. At error quis doloribus corporis exercitationem, praesentium unde, asperiores iusto minima eligendi aut sequi iste fugit nisi! Delectus odit saepe sit numquam quas dolorum eius deserunt ut dolore, optio veniam corporis repellendus modi, reprehenderit exercitationem illum aspernatur quis necessitatibus debitis iste laborum molestias ipsa voluptatibus consectetur. Dignissimos culpa accusantium aliquid harum ea quia quas nostrum ut maxime tenetur at non veritatis odit tempora eveniet, nisi assumenda est esse quidem perspiciatis recusandae facilis veniam! Tenetur et, nisi illum harum culpa in qui ex incidunt architecto, obcaecati cumque! Fugit esse necessitatibus neque officia, ullam assumenda quibusdam quo pariatur magni itaque minus eligendi dolores voluptatem ipsa praesentium! Unde dicta ducimus illo quae maiores necessitatibus. Illo ducimus maiores, dolorum aperiam eum, excepturi impedit nostrum exercitationem, animi fuga esse commodi. Nostrum consequatur dolorum commodi eveniet, odio asperiores quo facere ab repellendus aut, labore iusto aliquam ipsum? Odit, distinctio tempore recusandae aliquam voluptatum saepe pariatur sit dolorum dolore? Magnam consectetur nostrum dignissimos consequatur laboriosam explicabo dolores praesentium dolor dolore impedit minus ea ad, doloribus, neque ducimus saepe in? Libero magni hic ex, in ut facilis dicta quaerat pariatur, atque laborum quod doloremque velit dolore, distinctio id consectetur recusandae?
+            </div>
+            <div class="news">Lorem ipsum dolor sit amet consectetur adipisicing elit. At error quis doloribus corporis exercitationem, praesentium unde, asperiores iusto minima eligendi aut sequi iste fugit nisi! Delectus odit saepe sit numquam quas dolorum eius deserunt ut dolore, optio veniam corporis repellendus modi, reprehenderit exercitationem illum aspernatur quis necessitatibus debitis iste laborum molestias ipsa voluptatibus consectetur. Dignissimos culpa accusantium aliquid harum ea quia quas nostrum ut maxime tenetur at non veritatis odit tempora eveniet, nisi assumenda est esse quidem perspiciatis recusandae facilis veniam! Tenetur et, nisi illum harum culpa in qui ex incidunt architecto, obcaecati cumque! Fugit esse necessitatibus neque officia, ullam assumenda quibusdam quo pariatur magni itaque minus eligendi dolores voluptatem ipsa praesentium! Unde dicta ducimus illo quae maiores necessitatibus. Illo ducimus maiores, dolorum aperiam eum, excepturi impedit nostrum exercitationem, animi fuga esse commodi. Nostrum consequatur dolorum commodi eveniet, odio asperiores quo facere ab repellendus aut, labore iusto aliquam ipsum? Odit, distinctio tempore recusandae aliquam voluptatum saepe pariatur sit dolorum dolore? Magnam consectetur nostrum dignissimos consequatur laboriosam explicabo dolores praesentium dolor dolore impedit minus ea ad, doloribus, neque ducimus saepe in? Libero magni hic ex, in ut facilis dicta quaerat pariatur, atque laborum quod doloremque velit dolore, distinctio id consectetur recusandae?
+            </div>
+        </div>
+        <div id="footer">
+            Lorem, ipsum dolor sit amet consectetur adipisicing elit.
+        </div>
+
+
+    </div>
     
 </body>
 </html>
